# Chess

./: .gitignore  CMakeLists.txt  web.meta.json
include/: Application.hpp  Board.hpp  Move.hpp  Piece.hpp  Position.hpp  Texture2D.hpp  pch.hpp
shaders/: board.hlsl  highlight.hlsl  piece.hlsl
src/: Application.cpp  Board.cpp  Move.cpp  Piece.cpp  Texture2D.cpp  main.cpp
